<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- HEADER -->
    <FrameLayout
        android:id="@+id/headerFrameLayout"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@drawable/header_rounded_corners"
        android:elevation="6dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/profileHeaderTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/profile_header"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:shadowColor="#80000000"
            android:shadowDx="0"
            android:shadowDy="2"
            android:shadowRadius="4" />
    </FrameLayout>

    <!-- LOGIN / SIGNUP BUTTONS -->

    <!-- MIDDLE SECTION -->
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerFrameLayout">

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/transparent_btn"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login_btn_text"
            android:textColor="@color/light_black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_btn"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/signup_btn_text"
            android:textColor="@color/light_black"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/middleLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLayout"
        app:layout_constraintVertical_bias="0.115">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/lp_rounded_layout_bg"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/signupNowLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/signup_now_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/addMembersLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/add_members_text"
                    android:textSize="16sp" />
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/sharedAccountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/shared_acc_header"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frameLayout" />

        <TextView
            android:id="@+id/sharedAccountDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/shared_acc_desc_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sharedAccountLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
