<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/navBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/light_green"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Icons Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/containersBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/navigation"
                app:srcCompat="@mipmap/container_white" />

            <ImageButton
                android:id="@+id/groceriesBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/navigation"
                app:srcCompat="@mipmap/ingredient_white" />

            <ImageButton
                android:id="@+id/recipesBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/navigation"
                app:srcCompat="@mipmap/recipe_dark" />

            <ImageButton
                android:id="@+id/profileBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/navigation"
                app:srcCompat="@mipmap/profile_white" />
        </LinearLayout>

        <!-- Labels Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/containerNavTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/container_nav"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/groceriesNavTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/groceries_nav"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/recipesNavTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/recipes_nav"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/profileNavTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/profile_nav"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/addIngredientInRecipeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/add_ingredient_in_recipe_label"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchBarEt"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="top"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:background="@color/gray_white"
        android:drawableEnd="@mipmap/magnifying_glass"
        android:fontFamily="@font/poppins_regular"
        android:hint="Search"
        android:inputType="text"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColorHint="@color/forest_green"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addIngredientInRecipeLabel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="480dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBarEt" />

    <Button
        android:id="@+id/addIngredientNotFoundBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/recipe_add_ingredient_btn"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/add_ingredient_not_found_btn"
        app:layout_constraintBottom_toTopOf="@+id/doneBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintVertical_bias="0.734" />

    <Button
        android:id="@+id/doneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="24dp"
        android:text="@string/recipe_done_btn"
        app:layout_constraintBottom_toTopOf="@+id/navBarLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/green_btn_round_corner"/>

</androidx.constraintlayout.widget.ConstraintLayout>