<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header -->

    <!-- RecyclerView -->

    <!-- Add Container Button -->

    <!-- Add Container Text -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recipeForm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_corner_forms"
        app:layout_constraintBottom_toTopOf="@+id/navBarLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addIngredientInRecipeLabel">

        <EditText
            android:id="@+id/recipeNameEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/form_field_corner"
            android:ems="10"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/brown"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/recipe_name_et" />

        <EditText
            android:id="@+id/recipeDescriptionEt"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/form_field_corner"
            android:ems="10"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/brown"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipeNameEt"
            tools:text="@string/recipe_description" />

        <TextView
            android:id="@+id/recipeIngredientLabelTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/recipe_ingredient_label"
            android:textColor="@color/forest_green"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipeDescriptionEt" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipeIngredientListRv"
            android:layout_width="319dp"
            android:layout_height="302dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/form_field_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipeIngredientLabelTv"
            android:padding="15dp"/>

        <Button
            android:id="@+id/recipeAddIngredientBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_marginBottom="44dp"
            android:background="@drawable/recipe_add_ingredient_btn"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/recipe_add_ingredient_btn"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/recipeIngredientListRv"
            app:layout_constraintEnd_toEndOf="@+id/recipeIngredientListRv"
            app:layout_constraintStart_toStartOf="@+id/recipeIngredientListRv" />

        <Button
            android:id="@+id/recipeCancelBtn"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/recipe_cancel_btn"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/recipe_cancel_btn"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/recipeSaveBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/recipeSaveBtn"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/recipeSaveBtn"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/recipe_save_btn"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/recipe_save_btn"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/recipeCancelBtn"
            app:layout_constraintTop_toBottomOf="@+id/recipeIngredientListRv" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/navBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/light_green"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Icons Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/containersBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/navigation"
                android:src="@mipmap/container_white" />

            <ImageButton
                android:id="@+id/groceriesBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/navigation"
                android:src="@mipmap/ingredient_white" />

            <ImageButton
                android:id="@+id/recipesBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/navigation"
                android:src="@mipmap/recipe_dark" />


            <ImageButton
                android:id="@+id/profileBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/navigation"
                android:src="@mipmap/profile_white" />
        </LinearLayout>

        <!-- Labels Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/containerNavTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/container_nav"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/groceriesNavTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/groceries_nav"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/recipesNavTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/recipes_nav"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/profileNavTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/profile_nav"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/addIngredientInRecipeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Add a Recipe"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>